--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/loader/arm/linux.c: Change printf to dprintf.
+
+2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/zfs/zfs.c (check_feature): Cleanup and remove
 	inappropriate printf.
 
