--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/partmap/dfly.c: Simplify dprintfs for easier gettext
+	analysis.
+
+2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/loader/arm/linux.c: Change printf to dprintf.
 
 2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
