--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Start with
+	standard rather than noral color, in line with other terminals.
+
+2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/partmap/dfly.c: Simplify dprintfs for easier gettext
 	analysis.
 
