--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* tests/grub_func_test.in: Add unicode.pf2.
+
+2013-08-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Start with
 	standard rather than noral color, in line with other terminals.
 
