--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-11  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub-mkconfig.in: Fix detection of Emacs autosave files.
+
 2013-08-08  Vladimir Testov  <vladimir.testov@rosalab.ru>
 
 	* docs/grub.texi: Introduce terminal window position options:
