Replace find -not by the POSIX-compliant find !.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>
 
+	* autogen.sh: Replace find -not by the POSIX-compliant find !.
+
+2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>
+
 	Prevent shadowing of stdlib's devname(3) on BSD.
 
 	* grub-core/disk/cryptodisk.c (grub_cmd_cryptomount): Rename devname
