--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-14  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>
+
+	* .bzrignore: Add bootinfo.txt, grub.chrp, gnulib/float.h, and
+	remove-potcdate.sed.
+
 2013-08-14  Andrey Borzenkov <arvidjaar@gmail.com>
 
 	*  grub-core/disk/i386/pc/biosdisk.c (grub_biosdisk_iterate): Remove
