--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-08-15  Vladimir Testov  <vladimir.testov@gmail.com>
 
+	* grub-core/gfxmenu/gui_list.c: The number of color mappings is
+	reduced. Inheritant options are processed during the theme loading.
+
+2013-08-15  Vladimir Testov  <vladimir.testov@gmail.com>
+
 	* grub-core/gfxmenu/gui_list.c: Minimal width fixed.
 
 2013-08-14 Avik Sil <aviksil@in.ibm.com>
