--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/lib/posix_wrap/wchar.h: Fix wchar_t and mbstate_t conflict
+	on NetBSD and OpenBSD.
+
 2013-08-15  Vladimir Testov  <vladimir.testov@gmail.com>
 
 	* grub-core/gfxmenu/gui_list.c: Baseline misplacement fixed.
