--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-08-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Move ascii.h and widthspec.h generation to a separate build-time-only
+	tool.
+
 2013-08-16  Grégoire Sutre  <gregoire.sutre@gmail.com>
 
 	* grub-core/loader/i386/bsd.c (grub_netbsd_add_boot_disk_and_wedge):
