--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* INSTALL: Mention unavailability of man pages when cross-compiling.
+
+2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/crypto.h: Don't declare gcry_log_bug, gcry_log_printf
 	and gcry_log_bug.
 	* grub-core/lib/libgcrypt_wrap/mem.c: Include g10lib.h
