--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* conf/Makefile.common (CFLAGS_GCRY): Add -Wno-redundant-decls.
+
+2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/getroot.c: Include sys/wait.h only when we need waitpid.
 
 2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
