--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_size): Adapt for
+	mingw32 as well based on grub_util_get_disk_size.
+	* util/misc.c (grub_util_get_disk_size): Removed. all users switched to
+	grub_util_get_fd_size.
+	(sync): Removed.
+	(fsync): Moved to ...
+	* grub-core/kern/emu/misc.c (fsync): ... here.
+
+2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/mm.h (grub_extend_alloc): Remove.
 	* grub-core/loader/i386/pc/plan9.c: Use own version of
 	grub_extend_alloc with appropriate types.
