* configure.ac: Disable efiemu runtime on cygwin.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* configure.ac: Disable efiemu runtime on cygwin.
+
+2013-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* conf/Makefile.extra-dist: Add missing util/grub-gen-asciih.c,
 	util/grub-gen-widthspec.c and util/grub-pe2elf.c.
 
