--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/getroot.c (grub_find_device): Use cygwin_conv_path ratherthan
+	removed in current versions cygwin_conv_*.
+
+2013-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* configure.ac: Disable efiemu runtime on cygwin.
 
 2013-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
